<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/clear"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/clear"
            app:layout_constraintEnd_toStartOf="@+id/modulo"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/clear"
            app:layout_constraintTop_toTopOf="@+id/clear"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delete"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/modulo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/delete"
            app:layout_constraintEnd_toStartOf="@+id/divide"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/delete"
            app:layout_constraintTop_toTopOf="@+id/delete"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/modulo"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/modulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/modulo"
            app:layout_constraintTop_toTopOf="@+id/modulo"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/divide"
                android:textSize="30sp" />
        </RelativeLayout>


        <!--        Second Row-->


        <RelativeLayout
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_7"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/seven"
            app:layout_constraintEnd_toStartOf="@+id/nine"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/seven"
            app:layout_constraintTop_toTopOf="@+id/seven"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_8"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/eight"
            app:layout_constraintEnd_toStartOf="@+id/multiply"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/eight"
            app:layout_constraintTop_toTopOf="@+id/eight"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_9"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/nine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/nine"
            app:layout_constraintTop_toTopOf="@+id/nine"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/multiply"
                android:textSize="30sp" />
        </RelativeLayout>

        <!--        third row-->

        <RelativeLayout
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/five"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_4"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/four"
            app:layout_constraintEnd_toStartOf="@+id/six"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/four"
            app:layout_constraintTop_toTopOf="@+id/four"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_5"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/five"
            app:layout_constraintEnd_toStartOf="@+id/minus"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/five"
            app:layout_constraintTop_toTopOf="@+id/five"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_6"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/six"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/six"
            app:layout_constraintTop_toTopOf="@+id/six"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/minus"
                android:textSize="30sp" />
        </RelativeLayout>

        <!--        fourth row-->

        <RelativeLayout
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/two"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_1"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/one"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/one"
            app:layout_constraintTop_toTopOf="@+id/one"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_2"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/two"
            app:layout_constraintEnd_toStartOf="@+id/add"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/two"
            app:layout_constraintTop_toTopOf="@+id/two"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_3"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/three"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/three"
            app:layout_constraintTop_toTopOf="@+id/three"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/add"
                android:textSize="30sp" />
        </RelativeLayout>


        <!--        fifth row-->

        <RelativeLayout
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBaseline_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zero"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dot"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/dot"
            app:layout_constraintEnd_toStartOf="@+id/three"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@+id/dot"
            app:layout_constraintTop_toTopOf="@+id/dot"
            app:layout_constraintWidth_percent="0.25"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/_0"
                android:textSize="30sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toEndOf="@id/zero"
            app:layout_constraintTop_toTopOf="@id/zero"
            app:layout_constraintWidth_percent="0.50"
            android:onClick="click">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/equal"
                android:textSize="30sp"
                />
        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/margin"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/black"
        android:contentDescription="@string/_0"
        app:layout_constraintBottom_toTopOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="number"
        android:background="@null"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textAlignment="textEnd"
        android:textColorHint="#78909C"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>